# sol-mind-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  codama-dac-manager.json  codama-marketplace.json  codama-nft-operations.json  codama-sol-mind-protocol.json  codama-token-manager.json  codama.json  package.json
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/sdk/: README.md  package-lock.json  package.json  tsconfig.json
clients/sdk/src/: dacManagerClient.ts  index.ts  utils.ts
nodes/: Cargo.toml
nodes/compute-node/: .env.template  Cargo.toml  README.md
nodes/compute-node/scripts/: generate_keypair.sh
nodes/compute-node/src/: config.rs  main.rs
nodes/compute-node/src/adapters/: mod.rs  solana.rs
nodes/compute-node/src/services/: agent.rs  mod.rs  node_registry.rs
programs/dac-manager/: Cargo.toml
programs/dac-manager/src/: errors.rs  lib.rs  utils.rs
programs/dac-manager/src/context/: activate_agent.rs  claim_compute_node.rs  create_agent.rs  mod.rs  register_compute_node.rs  set_goal.rs  submit_task.rs  submit_task_result.rs
programs/dac-manager/src/state/: agent.rs  compute_node.rs  goal.rs  mod.rs  tasks.rs
programs/nft-operations/: Cargo.toml
programs/nft-operations/src/: errors.rs  helpers.rs  lib.rs
programs/nft-operations/src/context/: create_minter_config.rs  create_trade_hub.rs  delist_asset.rs  list_asset.rs  mint_asset.rs  mod.rs  purchase.rs
programs/nft-operations/src/state/: listing.rs  minter_config.rs  mod.rs  trade_hub.rs
programs/sol-mind-protocol/: Cargo.toml
programs/sol-mind-protocol/src/: errors.rs  helpers.rs  lib.rs
programs/sol-mind-protocol/src/context/: create_collection.rs  create_minter_config.rs  create_project.rs  initialize_project.rs  initialize_protocol.rs  mint_asset.rs  mod.rs  transfer_project_fees.rs  transfer_protocol_fees.rs  update_fees.rs
programs/sol-mind-protocol/src/helpers/: mod.rs
programs/sol-mind-protocol/src/state/: collection_config.rs  minter_config.rs  mod.rs  project_config.rs  protocol_config.rs
programs/token-manager/: Cargo.toml
programs/token-manager/src/: lib.rs
programs/token-manager/src/context/: create_minter_config.rs  mint_asset.rs  mod.rs
programs/token-manager/src/state/: minter_config.rs  mod.rs
scripts/: build-and-generate.sh  generate-clients.sh
tests/: constants.rs  dac-manager.rs  litesvm-tests.rs  nft-operations.rs  sol-mind-protocol.rs  sol-mind-protocol.ts  token-manager.rs
tests/setup/: accounts.rs  fixture.rs  instructions.rs  mod.rs  test_data.rs
tests/sol-mind-protocol/: mod.rs  tests.rs
tests/sol-mind-protocol/setup/: accounts.rs  constants.rs  fixture.rs  instructions.rs  mod.rs  test_data.rs
tests/utils/: Cargo.toml
tests/utils/src/: lib.rs  mpl.rs
