[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[package]
name = "sol-mind-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "litesvm-tests"
path = "tests/litesvm-tests.rs"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
sol-mind-protocol-client = { path = "clients/rust" }


[dev-dependencies]
litesvm = "0.8.1"
litesvm-token = "0.8.1"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-sdk-ids = "3.0.0"
solana-pubkey = "4.0.0"

