[workspace]
members = [
    "programs/sol-mind-protocol",
    "programs/token-manager",
    "programs/marketplace"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[package]
name = "sol-mind-protocol-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "sol-mind-protocol"
path = "tests/sol-mind-protocol.rs"

[[test]]
name = "token-manager"
path = "tests/token-manager.rs"

[dev-dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
litesvm = "0.8.1"
litesvm-token = "0.8.1"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-sdk-ids = "3.1.0"
solana-pubkey = "4.0.0"
solana-program = "2.0.0"
mpl-core = { version = "0.11.1", features = ["anchor"] }
sol-mind-protocol-client = { path = "clients/rust" }
utils = { path = "tests/utils" }

