[package]
name = "sol-mind-protocol-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_mind_protocol_client"

[features]
default = []
fetch = []
serde = []
anchor = []
anchor-idl-build = []


[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2"
solana-account-info = "3.1.0"
solana-cpi = "3.1.0"
solana-instruction = "3.1.0"
solana-program = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = { version = "4.0.0", features = ["borsh"] }
thiserror = "2.0.17"
