[package]
name = "compute-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
dotenvy = "0.15"
serde_json = "1.0"
sol-mind-protocol-client = { path = "../../clients/rust", features = ["fetch"] }
solana-account = "3.2.0"
solana-account-decoder = "3.1.4"
solana-client = "3.1.4"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
